# Project-App

./: README.md  layout_elements.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: app_dash.py  figures.py
src/data/: BPG.csv
src/pages/: aboutpage.py  bpgs.py  home.py  init.py  thebasics.py
tests/: conftest.py  test_app_dash.py
