[project]
name = "App"
version = "1.0.0"
description = "App testing"
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "pandas",
    "requests",
    "pytest",
    "pytest-cov",
    "selenium",
    "dash[testing]"
    # Ommitted - see requirements.txt
]

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
# exclude = ["tests"]
namespaces =  false

[tool.pytest.ini_options]
# addopts = "-ra -v --no-start-live-server"
addopts = "-v"
testpaths = ["tests",]
filterwarnings = [
    # "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]